@@ -46,6 +46,7 @@ Changes in @NEW@:
     * Updating files which point to other files (due to a PTR in the changeset)
       fails when those other files are not being installed (due to a
       conary remove on those files, for example (CNY-2595)
+    * Checking out sources unpacks duplicate binary files (CNY-2543)
 
 Changes in 1.2.18:
   o Build Changes:
